# cowriter

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data/listicles/: sample.json
src/: __init__.py  job.py  main.py
src/actions/: web_searcher.py
src/agents/: auto_cowriter_agent.py  base_cowriter_agent.py  interactive_cowriter_agent.py
src/app/: main.py
src/prompts/: conclusion.prompt  guess_topic.prompt  introduction.prompt  introduction_listicle.prompt  listicle_writer.prompt  section_extractor.prompt  system.prompt
src/utils/: config.py  cowriter_agent.py  display.py  llms.py  menu.py
